mozglue/baseprofiler/core/ProfiledThreadData.cpp
@@ -81,12 +81,14 @@ void ProfiledThreadData::StreamJSON(const ProfileBuffer& aBuffer,
   aWriter.End();
 }
 
-void StreamSamplesAndMarkers(
+int StreamSamplesAndMarkers(
     const char* aName, int aThreadId, const ProfileBuffer& aBuffer,
     SpliceableJSONWriter& aWriter, const std::string& aProcessName,
     const std::string& aETLDplus1, const TimeStamp& aProcessStartTime,
     const TimeStamp& aRegisterTime, const TimeStamp& aUnregisterTime,
     double aSinceTime, UniqueStacks& aUniqueStacks) {
+  int processedThreadId = 0;
+
   aWriter.StringProperty(
       "processType",
       "(unknown)" /* XRE_GeckoProcessTypeToString(XRE_GetProcessType()) */);
@@ -110,10 +112,6 @@ void StreamSamplesAndMarkers(
   if (!aETLDplus1.empty()) {
     aWriter.StringProperty("eTLD+1", aETLDplus1);
   }
-
-  aWriter.IntProperty("tid", static_cast<int64_t>(aThreadId));
-  aWriter.IntProperty("pid",
-                      static_cast<int64_t>(profiler_current_process_id()));
 
   if (aRegisterTime) {
     aWriter.DoubleProperty(
@@ -141,8 +139,8 @@ void StreamSamplesAndMarkers(
 
     aWriter.StartArrayProperty("data");
     {
-      aBuffer.StreamSamplesToJSON(aWriter, aThreadId, aSinceTime,
-                                  aUniqueStacks);
+      processedThreadId = aBuffer.StreamSamplesToJSON(
+          aWriter, aThreadId, aSinceTime, aUniqueStacks);
     }
     aWriter.EndArray();
   }
@@ -168,6 +166,14 @@ void StreamSamplesAndMarkers(
     aWriter.EndArray();
   }
   aWriter.EndObject();
+
+  aWriter.IntProperty("pid",
+                      static_cast<int64_t>(profiler_current_process_id()));
+  aWriter.IntProperty(
+      "tid",
+      static_cast<int64_t>(aThreadId != 0 ? aThreadId : processedThreadId));
+
+  return processedThreadId;
 }
 
 }  // namespace baseprofiler
