mozglue/baseprofiler/core/ProfiledThreadData.h
@@ -103,7 +103,10 @@ class ProfiledThreadData final {
   TimeStamp mUnregisterTime;
 };
 
-void StreamSamplesAndMarkers(
+// Stream all samples and markers from aBuffer with the given aThreadId (or 0
+// for everything, which is assumed to be a single backtrace sample.)
+// Returns the thread id of the output sample(s), or 0 if none was present.
+int StreamSamplesAndMarkers(
     const char* aName, int aThreadId, const ProfileBuffer& aBuffer,
     SpliceableJSONWriter& aWriter, const std::string& aProcessName,
     const std::string& aETLDplus1, const TimeStamp& aProcessStartTime,
